--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -15,9 +15,12 @@ nav h2, nav h4 {
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
-	font-size: 20px;
 	background-color: #D8FCA8;
 	font-weight: bold;
+}
+
+.nav-link {
+	font-size: 20px;
 }
 
 .navbar-brand {
