--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -13,8 +13,8 @@ footer {
 }
 
 footer h3, footer h5 {
-	color: #565656;
-	font-weight: 500;
+	color: #454f37;
+	font-weight: 600;
 }
 
 footer h5 {
