--- a/src/components/home/header/Header.css
+++ b/src/components/home/header/Header.css
@@ -12,8 +12,9 @@ header {
 	width: 480px;
 	height: 480px;
 	border-radius: 100%;
-	background-color: #8FA571;
-	color: #EBEBEB;
+	background-color: #454f37;
+	color: #FFF;
+	font-weight: bold;
 	margin: 50px auto;
 	transition: 1s;
 }
