--- a/src/components/home/content/intro/Intro.css
+++ b/src/components/home/content/intro/Intro.css
@@ -9,12 +9,14 @@ section {
 }
 
 .intro h3 {
-	color: #8FA571;
+	color: #454f37;
 	font-weight: 700;
 	margin: 20px auto;
 }
 
 .intro h4 {
+	color: #454f37;
+	font-weight: 600;
 	font-size: 22px;
 }
 
