--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -9,3 +9,10 @@
     color: black;
     font-weight: bold;
 }
+
+@media only screen and (max-width: 600px) {
+    .passive {
+        margin: 0 0.5rem;
+        font-size: 16px;
+    }
+}
